--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-{% load static %}
 
 <!DOCTYPE html>
 <html class="h-100">
@@ -19,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="#">
 
 </head>
 
