--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,15 @@
     </script>
     <link rel="stylesheet" href="#">
 
+<!-- FAVICON -->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+
+<!-- END FAVICON -->
+
 </head>
 
 <body class="d-flex flex-column h-100 main-bg">
