Add styling to index, listview.Move favicon.

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,4 +3,39 @@
 <a href="{% url 'listview' %}">listview</a>
 <div>index</div>
 
-{% endblock %}
+<div class="container container-fluid-3 bg-image position-relative">
+  <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1678224041/background_image_long_mf4jpm.jpg" class="img-fluid" alt="image-of-spices">
+    <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+     <div class="col-md-4">
+          <h1 class="card-title">Discover the World of Spices</h1>
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <p class="card-text">Add life to your everyday cooking!</p>
+          <p class="card-text"><small class="text-muted">Get started today</small></p>
+          <a href=""><button type="button" class="btn btn-dark" >Sign Up</button></a>
+        </div>
+      </div>
+    </div>
+  </div>
+ 
+  </div>
+<div class="container-fluid container-fluid-4">
+     <h2>Feel Free <i class="fa-brands fa-fly"></i></h2> 
+
+    <h2 class="justify-center"><i class="fas fa-regular fa-mortar-pestle"></i> So much flavour you can add to your recipes!</i></h2>
+    <br>
+    <br>
+    <p class="justify-center">
+      Spices and herbs should be used to enhance the natural flavor of food - not disguise
+      or obscure it. Many herbs and spices can complement a dish and each other;
+      however, be selective in their combinations. Avoid using too many at one time.
+      Herbs and spices have thousands of years of history of being used for medicinal
+      purposes. Not only do they add a delicious flavor to your meal, but they also offer a
+      variety of different medicinal properties. 
+    </p>
+
+  </div>
+  
+  {% endblock %}  
