--- a/templates/search.html
+++ b/templates/search.html
@@ -2,20 +2,6 @@
 
 {% block content %}
 
-<a href="{% url 'addspice' %}">Add Form</a>
-
-<form method="post" action="{% url 'search' %}" class="d-flex" role="search">
-  {% csrf_token %}
-  <select class="form-select" name="search" id="floatingSelect" action="{% url 'search' %}" aria-label="Floating label select example">
-    <option selected>Open this select menu</option>
-    <option value="medicinal">Medicinal</option>
-    <option value="cooking">Cooking</option>
-    <option value="baking">Baking</option>
-  </select>
-  <button class="btn btn-outline-success" type="submit">Search</button>
-</form>
-
-
 <div class="container-fluid">
     <div class="row">
 
@@ -55,6 +41,8 @@
             </div>
             <div class="row">
                 {% endif %}
+                {% empty %}
+                <p>No objects to display</p>
                 {% endfor %}
 
             </div>
