--- a/templates/base.html
+++ b/templates/base.html
@@ -4,148 +4,153 @@
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
+
 <head>
-    {% block meta %}
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% endblock %}
+  {% block meta %}
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  {% endblock %}
 
-    {% block corecss %} 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Merriweather&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-        </script>
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    {% endblock %}
+  {% block corecss %}
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Merriweather&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+  </script>
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  {% endblock %}
 
-    {% block corejs %}
-            <script src="https://kit.fontawesome.com/4ac481fc67.js" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    {% endblock %}
-
-        
-    <!-- FAVICON -->
-
-        <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
-        <link rel="manifest" href="static/favicon/site.webmanifest">
-
-    <!-- END FAVICON -->
+  {% block corejs %}
+  <script src="https://kit.fontawesome.com/4ac481fc67.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  {% endblock %}
 
 
-    <title>Spice Up Your Life</title>
+  <!-- FAVICON -->
+
+  <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
+  <link rel="manifest" href="static/favicon/site.webmanifest">
+
+  <!-- END FAVICON -->
+
+
+  <title>Spice Up Your Life</title>
 </head>
 
 <!-- Navigation -->
+
 <body class="d-flex flex-column h-100 main-bg">
-    <!--first / top container with drawk brown color -->
-    <div class="container-fluid container-fluid-1">
-      <!-- top section with dark brown color  -->
-    </div>
+  <!--first / top container with drawk brown color -->
+  <div class="container-fluid container-fluid-1">
+    <!-- top section with dark brown color  -->
+  </div>
 
-    <!--Second container with light cream color which holds logo and nav bar. -->
-    <div class="container-fluid container-fluid-2">
+  <!--Second container with light cream color which holds logo and nav bar. -->
 
-      <nav class="navbar navbar-expand">
-          <!-- <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-right"> -->
-            <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                <h2 class="logo-font-1 text-black my-0"><strong>SPICE </strong></h2>
-                <h4 class="logo-font-2 text-black my-0 border-bottom border-4 d-inline-block" style="border-color: #e79e39"><strong>UP YOUR LIFE </strong></h4>
-            </a>
 
-            <ul class="navbar-nav ml-auto">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button> 
-             <div class="collapse navbar-collapse" id="navbarSupportedContent"></div> 
+    <nav class="navbar navbar-expand">
+      <div class="container-fluid container-fluid-2">
+      <!-- <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-right"> -->
+      <a href="{% url 'home' %}" class="nav-link main-logo-link">
+        <h2 class="logo-font-1 text-black my-0"><strong>SPICE </strong></h2>
+        <h4 class="logo-font-2 text-black my-0 border-bottom border-4 d-inline-block" style="border-color: #e79e39">
+          <strong>UP YOUR LIFE </strong></h4>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data--bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'home' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'listview' %}">Spices</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
+            aria-haspopup="true" data-bs-toggle="dropdown" aria-expanded="false">
+            My Account
+          </a>
+            <ul class="dropdown-menu border-0" aria-labelledby="my-account-link">
+              {% if user.is_authenticated %}
+              <li><a href="{% url 'account_logout' %}" class="dropdown-item-2">Sign Out</a></li>
+              {% else %}
+              <li><a href="{% url 'account_signup' %}" class="dropdown-item-1">Sign Up</a></li>
+              <li><a href="{% url 'account_login' %}" class="dropdown-item-2">Sign In</a></li>
+              {% endif %}
             </ul>
-            <ul class="navbar-nav mr-auto">
-
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home</a>
-                </li>
-
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Spices</a>
-                </li>
-
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    My Account
-                  </a>
-                <ul class="dropdown-menu border-0" aria-labelledby="my-account-link">
-                  
-                {% if user.is_authenticated %}
-                  <li><a href="{% url 'account_logout' %}" class="dropdown-item-2">Sign Out</a></li>
-                {% else %}
-                   <li><a href="{% url 'account_signup' %}" class="dropdown-item-1">Sign Up</a></li>
-                  <li><a href="{% url 'account_login' %}" class="dropdown-item-2">Sign In</a></li>
-                {% endif %}
-               </ul>
-          </div> 
-        
-      </nav>
-    </div>
-
-
-    <div class="container">
-      <div class="row">
-          <div class="col-md-8 offset-md-2">
-              {% for message in messages %}
-              <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
-                  {{ message | safe }}
-                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-              </div>
-              {% endfor %}
-          </div>
+          </li>
+        </ul>
       </div>
+
+      </nav>
+ 
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        {% for message in messages %}
+        <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+          {{ message | safe }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
   </div>
 
 
-    <!--Third container with background image. moved to index.html -->
+  <!--Third container with background image. moved to index.html -->
 
 
-     <!--Container 4 moved to index.html -->
-       
-    <!--Content From Other Pages will be automatically inserted below -->
-    <div class="container">
-        {% block content %}
-        <!-- Content From Other Pages Goes Here -->
-        {% endblock content %}
-    </div>
+  <!--Container 4 moved to index.html -->
 
-    <!--Container 5  with Footer Details -->
-    <div class="container-fluid container-fluid-5">
+  <!--Content From Other Pages will be automatically inserted below -->
+  <div class="container">
+    {% block content %}
+    <!-- Content From Other Pages Goes Here -->
+    {% endblock content %}
+  </div>
+
+  <!--Container 5  with Footer Details -->
+  <div class="container-fluid container-fluid-5">
     <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center style-1">CI Group Project - The Spice Ladies</p>
-        <p class="m-0 text-center style-2">Follow us:  
-          <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"><i class="fab fa-facebook-square ms-3"></i></a>
-          <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in new tab)"><i class="fab fa-twitter-square ms-3 style-3"></i></a>
-          <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page (opens in new tab)"><i class="fab fa-instagram-square ms-3 style-4"></i></a>
-          <a href="http://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in new tab)"><i class="fab fa-youtube-square ms-3 style-5"></i></p>
+      <p class="m-0 text-center style-1">CI Group Project - The Spice Ladies</p>
+      <p class="m-0 text-center style-2">Follow us:
+        <a href="http://facebook.com" target="_blank" rel="noopener"
+          aria-label="Visit our Facebook page (opens in new tab)"><i class="fab fa-facebook-square ms-3"></i></a>
+        <a href="http://twitter.com" target="_blank" rel="noopener"
+          aria-label="Visit our Twitter page (opens in new tab)"><i class="fab fa-twitter-square ms-3 style-3"></i></a>
+        <a href="http://instagram.com" target="_blank" rel="noopener"
+          aria-label="Visit our instagram page (opens in new tab)"><i
+            class="fab fa-instagram-square ms-3 style-4"></i></a>
+        <a href="http://youtube.com" target="_blank" rel="noopener"
+          aria-label="Visit our Youtube page (opens in new tab)"><i class="fab fa-youtube-square ms-3 style-5"></i></p>
     </footer>
 
     <script>
       setTimeout(function () {
-          let messages = document.getElementById('msg');
-          let alert = new bootstrap.Alert(messages);
-          alert.close();
+        let messages = document.getElementById('msg');
+        let alert = new bootstrap.Alert(messages);
+        alert.close();
       }, 2000);
-  </script>
+    </script>
 
   </div>
 </body>
 
 </html>
-
-
