--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,10 @@
           <span class="navbar-toggler-icon"></span>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
-      <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <p class="nav-link">You are logged as: {{ request.user }}</p>
+        </li>
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'home' %}">Home</a>
         </li>
@@ -93,6 +96,7 @@
               {% endif %}
             </ul>
           </li>
+          
         </ul>
       </div>
       </nav>
